--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
     </div>
   </header>
 
-
   <section id="home" class="home">
     <div class="home-text">
       <h3>Help us to Save</h3>
@@ -38,35 +37,33 @@
     </div>
   </section>
 
-
   <section id="sectors" class="core container">
     <h4 class="section-subtitle">Our Core Sectors</h4>
     <h2 class="section-title">We Invest In Four Key Areas</h2>
     <div class="grid-4">
-      <div class="card center">
+      <div class="box center">
         <img src="images/icons8-profitability-96.png" class="icon-img">
         <h3>Economic Opportunity</h3>
         <p>Creating jobs and empowering communities to achieve financial stability and growth.</p>
       </div>
 
-      <div class="card center">
+      <div class="box center">
         <img src="images/icons8-doctors-bag-96.png" class="icon-img">
         <h3>Health and Nutrition</h3>
         <p>Promoting healthy lives through access to healthcare and proper nutrition.</p>
       </div>
-      <div class="card center">
+      <div class="box center">
         <img src="images/icons8-student-male-100.png" class="icon-img">
         <h3>Education</h3>
         <p>Providing quality learning opportunities to build brighter futures.</p>
       </div>
-      <div class="card center">
+      <div class="box center">
         <img src="images/icons8-water-64.png" class="icon-img">
         <h3>Water & Sanitation</h3>
         <p>Ensuring clean water and proper sanitation for healthier communities.</p>
       </div>
     </div>
   </section>
-
 
   <section id="about" class="about container">
     <div class="about-container">
@@ -93,29 +90,27 @@
     </div>
   </section>
 
-
   <section id="causes" class="causes container">
     <h4 class="section-subtitle">We Are Fighting For</h4>
     <h2 class="section-title">Recent Causes</h2>
     <div class="grid-3">
-      <div class="card">
-        <img src="images/b.jpg" class="card-img">
+      <div class="box">
+        <img src="images/b.jpg" class="box-img">
         <h3>Our programs foster enterprise</h3>
         <p>Raised: $10,605 | Goal: $20,000</p>
       </div>
-      <div class="card">
-        <img src="images/n.webp" class="card-img">
+      <div class="box">
+        <img src="images/n.webp" class="box-img">
         <h3>Our education programs create safe</h3>
         <p>Raised: $14,605 | Goal: $25,000</p>
       </div>
-      <div class="card">
-        <img src="images/z.jpg" class="card-img">
+      <div class="box">
+        <img src="images/z.jpg" class="box-img">
         <h3>Restore access to clean drinking water</h3>
         <p>Raised: $19,605 | Goal: $30,000</p>
       </div>
     </div>
   </section>
-
 
   <section class="stats">
     <div class="container grid-4">
@@ -126,7 +121,6 @@
     </div>
   </section>
 
-
   <section id="mission" class="mission container">
     <h4>Our Mission</h4>
     <h2>We’re on a mission to solve the water crisis <br> and reinvent charity.</h2>
@@ -134,24 +128,23 @@
     <a href="#" class="btn">Learn More</a>
   </section>
 
-
   <section id="volunteer" class="volunteers container">
   <h4>Volunteering For Good</h4>
   <h2>Meet Our Volunteers</h2>
   <div class="grid-4 center">
-    <div class="card">
+    <div class="box">
       <img src="images/pp.jpg"  class="vol-img">
       <h3>Kian Victorillo</h3>
     </div>
-    <div class="card">
+    <div class="box">
       <img src="images/m.jpg"  class="vol-img">
       <h3>Andre Estrera</h3>
     </div>
-    <div class="card">
+    <div class="box">
       <img src="images/q.jpg" class="vol-img">
       <h3>Frans Ababa</h3>
     </div>
-    <div class="card">
+    <div class="box">
       <img src="images/w.jpg"  class="vol-img">
       <h3>Jake Corro</h3>
     </div>
