it is what it is

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Humanity - Charity Foundation</title>
+  <title>VICTORILLO-TEMPLATE-ACTIVITY</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <header class="navbar">
+<header class="navbar">
     <div class="container nav-content">
       <h1 class="logo">Humanity</h1>
       <nav>
@@ -19,7 +19,6 @@
           <li><a href="#causes">Causes</a></li>
           <li><a href="#mission">Our Mission</a></li>
           <li><a href="#volunteer">Volunteers</a></li>
-          
         </ul>
       </nav>
       <a href="#" class="btn donate-btn">Donate Now</a>
@@ -151,8 +150,8 @@
   </div>
 </section>
 
-  <section class="cta">
-    <div class="cta-container">
+  <section class="last">
+    <div class="last-container">
         <h2>Donate to Homeless People</h2>
         <h3>We make every donation count.</h3>
         <br>
